use ansible "pids" module for metrocis-ddos

--- a/playbooks/roles/setup_common/tasks/update.yaml
+++ b/playbooks/roles/setup_common/tasks/update.yaml
@@ -15,6 +15,7 @@
       - iptables
       - needrestart
       - psmisc
+      - python3-psutil
 
 - name: Install or update additional software
   when: additional_software
