shuffle a task from kernel to base

--- a/playbooks/roles/setup_common/tasks/base.yaml
+++ b/playbooks/roles/setup_common/tasks/base.yaml
@@ -73,3 +73,9 @@
     dest: /etc/systemd/system/logrotate.timer.d/override.conf
   notify:
     - "Reload Systemd"
+
+- name: Ensure kernel crash dumps are made to /tmp
+  ansible.builtin.cron:
+    name: "core debug files"
+    special_time: reboot
+    job: "echo '/tmp/core.\\%e.\\%p.\\%s.\\%t' > /proc/sys/kernel/core_pattern"
