handle fire-fand-forget case for linux build finish action

--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -113,7 +113,7 @@
 - name: Create swap file for small VPS
   when: ansible_facts.memtotal_mb < 2048
   ansible.builtin.shell:
-    cmd: |
+    cmd: |-
       set -euf
 
       fallocate -l 2G /swapfile
@@ -139,6 +139,6 @@
   when: _kernel_repo.changed or _kernel_patched.changed or _kernel_configured.changed or _kernel_build_script.changed
   changed_when: true
   ansible.builtin.shell:
-    cmd: "{{ fire_and_forget | ternary('nohup /root/build-kernel.sh &', '/root/build-kernel.sh') }}"
+    cmd: "{{ fire_and_forget | ternary('nohup /root/build-kernel.sh reboot &', '/root/build-kernel.sh') }}"
     executable: /bin/bash
   register: _kernel_build
