fixed kernel config wrt nf_tables

--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -57,26 +57,42 @@
 
       sed -i \
         -e '/^CONFIG_AGP=/d' \
-        -e '/^CONFIG_BPF=/d' \
         -e '/^CONFIG_BTRFS_FS=/d' \
         -e '/^CONFIG_DRM=/d' \
         -e '/^CONFIG_FB=/d' \
         -e '/^CONFIG_HID=/d' \
         -e '/^CONFIG_SOUND=/d' \
-        -e '/^CONFIG_USB=/d' \
+        -e '/^CONFIG_USB_support=/d' \
         .config
 
       cat <<EOF >>.config
+
+      CONFIG_LOCALVERSION=""
+      CONFIG_LOCALVERSION_AUTO=y
+
+      CONFIG_RD_GZIP=y
+      CONFIG_RD_ZSTD=y
+
+      CONFIG_BPF=n
+      CONFIG_HID=n
+
+      CONFIG_NETFILTER_EGRESS=n
+      CONFIG_NETFILTER_INGRESS=n
+      CONFIG_NF_CT_PROTO_DCCP=n
+      CONFIG_NF_CT_PROTO_SCTP=n
+      CONFIG_NF_CT_PROTO_UDPLITE=n
+      CONFIG_NF_TABLES_ARP=n
+      CONFIG_NF_TABLES_NETDEV=n
+
       CONFIG_IP6_NF_FILTER=m
       CONFIG_IP6_NF_IPTABLES=m
       CONFIG_IP6_NF_NAT=m
       CONFIG_IP6_NF_RAW=m
       CONFIG_IP_NF_FILTER=m
+      CONFIG_IP_NF_IPTABLES=m
       CONFIG_IP_NF_NAT=m
       CONFIG_IP_SET=m
       CONFIG_IP_SET_HASH_IP=m
-      CONFIG_LOCALVERSION=""
-      CONFIG_LOCALVERSION_AUTO=y
       CONFIG_NETFILTER_XT_MATCH_COMMENT=m
       CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=m
       CONFIG_NETFILTER_XT_MATCH_CONNTRACK=m
@@ -87,13 +103,15 @@
       CONFIG_NETFILTER_XT_NAT=m
       CONFIG_NETFILTER_XT_SET=m
       CONFIG_NF_CONNTRACK=m
-      CONFIG_NF_CT_NETLINK=m
       CONFIG_NF_NAT=m
-      #CONFIG_NF_TABLES=m
-      #CONFIG_NFT_COMPAT=m
+      CONFIG_NF_TABLES=m
+      CONFIG_NF_TABLES_INET=y
+      CONFIG_NF_TABLES_IPV4=y
+      CONFIG_NF_TABLES_IPV6=y
+      CONFIG_NFT_COMPAT=m
+      CONFIG_NFT_LIMIT=m
       CONFIG_NFT_NAT=m
-      CONFIG_RD_GZIP=y
-      CONFIG_RD_ZSTD=y
+
       EOF
 
       yes '' | make oldconfig >/dev/null
