--- a/site-setup.yaml
+++ b/site-setup.yaml
@@ -2,6 +2,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 ---
-- ansible.builtin.import_playbook: playbooks/setup-common.yaml
+- ansible.builtin.import_playbook: playbooks/setup-misc.yaml
 - ansible.builtin.import_playbook: playbooks/setup-snowflake.yaml
 - ansible.builtin.import_playbook: playbooks/setup-tor.yaml
