set a default for tor_metrics_ddos

--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -17,3 +17,6 @@ bridge_distribution: "none"
 
 # use a dedicated DDoS solution at servers
 firewall_use_ddos: false
+
+# cpu consuming
+tor_metrics_ddos: false
