--- a/playbooks/info-snowflake.yaml
+++ b/playbooks/info-snowflake.yaml
@@ -3,6 +3,8 @@
   hosts: snowflake
   roles:
     - role: info_common
+      tags:
+        - info-common
     - role: info_snowflake
-  tags:
-    - info-snowflake
+      tags:
+        - info-snowflake
