better default for an empty blocklist

--- a/playbooks/roles/info_tor/tasks/onionoo.yaml
+++ b/playbooks/roles/info_tor/tasks/onionoo.yaml
@@ -15,6 +15,6 @@
       {{ _result.json.bridges[0].bridgedb_distributor | default('-') }}
       {{ _result.json.bridges[0].advertised_bandwidth | default('-') }}
       running: {{ _result.json.bridges[0].running | default('-') }}
-      blocklist: {{ _result.json.bridges[0].blocklist | default([]) | join(',') }}"
+      blocklist: {{ _result.json.bridges[0].blocklist | default(['-']) | join(',') }}"
     path: "{{ tmp_dir }}/tor_onionoo"
     regex: "^{{ inventory_hostname }} "
