add ./inventory to config

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,8 @@
 [defaults]
 interpreter_python = /usr/bin/python3
 
+inventory = ./inventory
+
 forks = 32
 pipelining = True
 strategy = ansible.builtin.free
