--- a/site-setup.yaml
+++ b/site-setup.yaml
@@ -1,4 +1,4 @@
-#!/usr/bin/env -S ansible-playbook -e @secrets/local.yaml -i inventory
+#!/usr/bin/env -S ansible-playbook -e @secrets/local.yaml
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 ---
