factor out run_once into an own role

--- a/playbooks/info-snowflake.yaml
+++ b/playbooks/info-snowflake.yaml
@@ -1,4 +1,12 @@
 ---
+- name: Info Base
+  strategy: linear
+  hosts: snowflake
+  roles:
+    - role: info_base
+      tags:
+        - info-base
+
 - name: Info Snowflake
   hosts: snowflake
   roles:
