--- a/playbooks/info-misc.yaml
+++ b/playbooks/info-misc.yaml
@@ -1,4 +1,12 @@
 ---
+- name: Info Base
+  strategy: linear
+  hosts: misc
+  roles:
+    - role: info_base
+      tags:
+        - info-base
+
 - name: Info Misc
   hosts: misc
   roles:
