--- a/playbooks/info-tor.yaml
+++ b/playbooks/info-tor.yaml
@@ -1,4 +1,12 @@
 ---
+- name: Info Base
+  strategy: linear
+  hosts: tor
+  roles:
+    - role: info_base
+      tags:
+        - info-base
+
 - name: Info Tor
   hosts: tor
   roles:
