--- a/playbooks/roles/setup_common/defaults/main.yaml
+++ b/playbooks/roles/setup_common/defaults/main.yaml
@@ -2,11 +2,12 @@
 additional_ports: []
 additional_software: []
 
-# use the backported kernel
 kernel_debian_backports: true
+kernel_debian_cloud: true
 
 kernel_git_version: "" # e.g. "HEAD" or "v6.7.3"
 kernel_git_patches: []
+fire_and_forget: true
 
 metrics_port: ""
 prometheus_server: ""
@@ -16,8 +17,5 @@ ssl_dir: "{{ playbook_dir }}/../secrets/ssl"
 
 # apt timer schedules, reboot (for deferred service) is made via cron in the following hour
 timer_hour: "{{ 12 | random(seed=inventory_hostname) }}"
-
-# do not wait for kernel being build ?
-fire_and_forget: false
 
 node_metrics: false
