--- a/playbooks/roles/info_common/tasks/ipv6.yaml
+++ b/playbooks/roles/info_common/tasks/ipv6.yaml
@@ -3,7 +3,8 @@
 
 - name: Gather facts
   ansible.builtin.setup:
-    gather_subset: "{{ facts_subset }}"
+    gather_subset:
+      - "default_ipv6"
 
 - name: Validate ipv6 address
   ansible.builtin.assert:
