do not always gather facts

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -3,7 +3,7 @@
   ansible.builtin.setup:
     gather_subset: "{{ facts_subset }}"
   tags:
-    - always
+    - facts
 
 - name: Validate
   ansible.builtin.import_tasks: validate.yaml
