--- a/playbooks/roles/info_common/tasks/issue.yaml
+++ b/playbooks/roles/info_common/tasks/issue.yaml
@@ -18,6 +18,7 @@
   block:
     - name: Findings of issue/s since {{ log_system_since }}
       delegate_to: localhost
+      throttle: "{{ nproc }}"
       ansible.builtin.copy:
         content: "{{ _result.stdout }}"
         dest: "{{ tmp_dir }}/issues/{{ inventory_hostname }}.log"
@@ -32,6 +33,7 @@
       register: _config_fname
 
     - name: Download Linux kernel config file name
+      throttle: "{{ nproc }}"
       ansible.builtin.fetch:
         src: "{{ _config_fname.stdout }}"
         dest: "{{ tmp_dir }}/issues/{{ inventory_hostname }}.config"
