limit poweron to Hetzner

--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -2,6 +2,7 @@
 - name: Ensure system is up
   delegate_to: localhost
   throttle: "{{ nproc }}"
+  when: ansible_facts.system_vendor == 'Hetzner'
   tags:
     - never
     - poweron
