refactor power on into own role

--- a/playbooks/info-snowflake.yaml
+++ b/playbooks/info-snowflake.yaml
@@ -2,6 +2,7 @@
 - name: Info Snowflake
   hosts: snowflake
   roles:
+    - role: poweron
     - role: info_common
       tags:
         - info-common
