--- a/ansible.cfg
+++ b/ansible.cfg
@@ -15,8 +15,7 @@ fact_caching_connection = ./.ansible_facts
 
 remote_user = root
 
-# compression is discouraged wrt security aspects
-ssh_args = -o Compression=no -o StrictHostKeyChecking=on -o ControlMaster=auto -o ControlPersist=60s
+ssh_args = -o StrictHostKeyChecking=on -o ControlMaster=auto -o ControlPersist=60s -o GSSAPIAuthentication=no -o IdentitiesOnly=yes
 
 # reduce noise
 display_skipped_hosts = false
