--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -11,5 +11,8 @@ facts_subset:
   - "distribution"
   - "hardware"
 
+# store certificates and more
+ssl_dir: "{{ playbook_dir }}/../secrets/ssl"
+
 # local directory for site-info files
 tmp_dir: "{{ lookup('env', 'HOME') }}/tmp"
