--- a/playbooks/roles/ca/tasks/main.yaml
+++ b/playbooks/roles/ca/tasks/main.yaml
@@ -4,14 +4,13 @@
 
 - name: Generate CA
   delegate_to: localhost
-  throttle: 1
   block:
     - name: Create local directories
       delegate_to: localhost
       throttle: 1
       ansible.builtin.file:
         state: directory
-        path: "{{ ssl_dir }}/{{ item }}"
+        path: "{{ ssl_dir }}/CA/{{ item }}"
         owner: "tfoerste"
         group: "tfoerste"
         mode: "0755"
@@ -21,11 +20,11 @@
         - certs/
     - name: Generate Root CA private key
       community.crypto.openssl_privatekey:
-        path: "{{ ssl_dir }}/keys/CA.key"
+        path: "{{ ssl_dir }}/CA/keys/CA.key"
     - name: Generate Root CA CSR
       community.crypto.openssl_csr:
-        path: "{{ ssl_dir }}/csrs/CA.csr"
-        privatekey_path: "{{ ssl_dir }}/keys/CA.key"
+        path: "{{ ssl_dir }}/CA/csrs/CA.csr"
+        privatekey_path: "{{ ssl_dir }}/CA/keys/CA.key"
         common_name: "ROOT CA tor-relays"
         country_name: "DE"
         basic_constraints:
@@ -38,7 +37,7 @@
         key_usage_critical: yes
     - name: Generate Root CA certificate
       community.crypto.x509_certificate:
-        path: "{{ ssl_dir }}/certs/CA.crt"
-        privatekey_path: "{{ ssl_dir }}/keys/CA.key"
-        csr_path: "{{ ssl_dir }}/csrs/CA.csr"
+        path: "{{ ssl_dir }}/CA/certs/CA.crt"
+        privatekey_path: "{{ ssl_dir }}/CA/keys/CA.key"
+        csr_path: "{{ ssl_dir }}/CA/csrs/CA.csr"
         provider: selfsigned
