--- a/playbooks/roles/info_common/tasks/issue.yaml
+++ b/playbooks/roles/info_common/tasks/issue.yaml
@@ -33,7 +33,7 @@
       register: _config_fname
 
     - name: Download Linux kernel config file name
-      throttle: "{{ nproc }}"
+      throttle: "{{ jobs }}"
       ansible.builtin.fetch:
         src: "{{ _config_fname.stdout }}"
         dest: "{{ tmp_dir }}/issues/{{ inventory_hostname }}.config"
