run Tor/Snowflake after 1st kernel is build and booted

--- a/playbooks/roles/setup_common/tasks/base.yaml
+++ b/playbooks/roles/setup_common/tasks/base.yaml
@@ -4,6 +4,7 @@
     path: /root/.ansible/tmp
     state: directory
     mode: "0700"
+  register: _base_initialized
 
 - name: Set the hostname
   ansible.builtin.hostname:
