--- a/playbooks/roles/setup_snowflake/handlers/main.yaml
+++ b/playbooks/roles/setup_snowflake/handlers/main.yaml
@@ -8,5 +8,4 @@
   listen: "Restart Snowflake"
   ansible.builtin.systemd_service:
     name: snowflake-proxy
-    state: "{{ (_base_initialized.changed and fire_and_forget and _kernel_build.changed) | ternary('stopped', 'restarted') }}"
-    no_block: true
+    state: restarted
