--- a/playbooks/roles/setup_tor/handlers/main.yaml
+++ b/playbooks/roles/setup_tor/handlers/main.yaml
@@ -20,11 +20,11 @@
   listen: "Reload Tor"
   ansible.builtin.systemd_service:
     name: tor
-    state: "{{ (_base_initialized.changed and fire_and_forget and _kernel_build.changed) | ternary('stopped', 'reloaded') }}"
+    state: reloaded
 
 - name: Restart Tor
   listen: "Restart Tor"
   ansible.builtin.systemd_service:
     name: tor
-    state: "{{ (_base_initialized.changed and fire_and_forget and _kernel_build.changed) | ternary('stopped', 'restarted') }}"
+    state: restarted
     no_block: true
