fix broken metrics deployment

--- a/playbooks/roles/setup_snowflake/tasks/main.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/main.yaml
@@ -53,7 +53,7 @@
           tags:
             - config
 
-    - name: Enable Snowflake at boot
+    - name: Enable Snowflake
       ansible.builtin.systemd_service:
         name: snowflake-proxy
       notify: "Restart Snowflake"
