fix left overs from re-org inventory

--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -18,5 +18,6 @@ bridge_distribution: "none"
 # use a dedicated DDoS solution at servers
 firewall_use_ddos: false
 
+tor_metrics: true
 # cpu consuming
 tor_metrics_ddos: false
