do not start app before  very first kernel build succeeded

--- a/playbooks/roles/setup_common/tasks/base.yaml
+++ b/playbooks/roles/setup_common/tasks/base.yaml
@@ -4,6 +4,7 @@
     path: /root/.ansible/tmp
     state: directory
     mode: "0700"
+  register: _ansible_tmp
 
 - name: Set the hostname
   ansible.builtin.hostname:
