--- a/playbooks/roles/setup_common/tasks/main.yaml
+++ b/playbooks/roles/setup_common/tasks/main.yaml
@@ -126,6 +126,10 @@
             jid: "{{ _kernel_build.ansible_job_id }}"
             mode: cleanup
 
+    - name: Ensure kernel build finished
+      ansible.builtin.set_fact:
+        _first_kernel_build_in_progress: "{{ (_ansible_tmp.changed and fire_and_forget and _kernel_build.changed) | bool }}"
+
     - name: Check if reboot is needed
       ansible.builtin.import_tasks: reboot.yaml
       tags:
